--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel public/index.html -p 5000 --open",
-    "build": "parcel build public/index.html --no-source-maps --out-dir build/"
+    "start": "parcel public/index.html -p 5000 --open --out-dir build/",
+    "build": "rm -rf build/ && parcel build public/index.html --no-source-maps --out-dir build/"
   },
   "dependencies": {
     "three": "^0.116.1"
