--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "parcel public/index.html -p 5000 --open --out-dir build/",
+    "start": "parcel public/index.html -p 5000 --open",
     "build": "rm -rf build/ && parcel build public/index.html --no-source-maps --out-dir build/"
   },
   "dependencies": {
